--- a/assignments/assgn-latex/Makefile
+++ b/assignments/assgn-latex/Makefile
@@ -1,7 +1,7 @@
 SERVER=		secure.itm.miun.se
 PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund/assignments
-FILES=		assgn-install.tex ../../itgrund.bib
-DOCUMENTS=	assgn-install.pdf
+FILES=		assgn-latex.tex ../../itgrund.bib
+DOCUMENTS=	assgn-latex.pdf
 
 include miun.docs.mk
