--- a/introduction/Makefile
+++ b/introduction/Makefile
@@ -1,5 +1,8 @@
-files=	welcome.tex studyguide.tex
+SERVER=		secure.itm.miun.se
+PUBDIR=		/home/danbos/www/pub
+CATEGORY=	itgrund
+FILES=		literature.tex ../itgrund.bib welcome.tex studyguide.tex \
+			kursplan.pdf
+DOCUMENTS=	literature.pdf welcome.pdf studyguide.pdf
 
-all:	welcome.pdf studyguide.pdf
-
-include miun.latex.mk
+include miun.docs.mk
