work in progress.  added svn keyword Id.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@163 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/assgn-internet/Makefile
+++ b/assignments/assgn-internet/Makefile
@@ -1,7 +1,7 @@
 SERVER=		secure.itm.miun.se
 PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund/assignments
-FILES=		assgn-sftp.tex ../../itgrund.bib
-DOCUMENTS=	assgn-sftp.pdf
+FILES=		assgn-internet.tex ../../itgrund.bib
+DOCUMENTS=	assgn-internet.pdf
 
 include miun.docs.mk
