--- a/assignments/assgn-security/Makefile
+++ b/assignments/assgn-security/Makefile
@@ -1,7 +1,7 @@
 SERVER=		secure.itm.miun.se
 PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund/assignments
-FILES=		assgn-sftp.tex ../../itgrund.bib
-DOCUMENTS=	assgn-sftp.pdf
+FILES=		assgn-security.tex ../../itgrund.bib
+DOCUMENTS=	assgn-security.pdf
 
 include miun.docs.mk
