--- a/assignments/assgn-sftp/Makefile
+++ b/assignments/assgn-sftp/Makefile
@@ -4,4 +4,6 @@ CATEGORY=	itgrund/assignments
 FILES=		assgn-sftp.tex ../../itgrund.bib
 DOCUMENTS=	assgn-sftp.pdf
 
+assgn-sftp.pdf: assgn-sftp.tex rfc.bib
+
 include miun.docs.mk
