new literature.  updated brookshear entry.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@172 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/Makefile
+++ b/assignments/Makefile
@@ -4,6 +4,7 @@ SUBDIR?= \
 		 assgn-latex \
 		 assgn-computer \
 		 assgn-internet \
-		 assgn-security
+		 assgn-security \
+		 assgn-sftp
 
 include miun.subdir.mk
