restructuring and using new build system miun.course.mk
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@215 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,7 +1,7 @@
-SERVER=		secure.itm.miun.se
-PUBDIR=		/home/danbos/www/pub
-CATEGORY=	itgrund
-FILES=
-DOCUMENTS=
+CATEGORY=	itgrund/project
+FILES=		project.tex ../../itgrund.bib
+DOCUMENTS=	project.pdf
 
-include miun.docs.mk
+project.pdf: project.tex ../../itgrund.bib
+
+include miun.course.mk
