--- a/assignments/assgn-computer/Makefile
+++ b/assignments/assgn-computer/Makefile
@@ -1,7 +1,7 @@
-SERVER=		secure.itm.miun.se
-PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund/assignments
 FILES=		assgn-computer.tex ../../itgrund.bib
 DOCUMENTS=	assgn-computer.pdf
 
-include miun.docs.mk
+assgn-computer.pdf: assgn-computer.tex ../../itgrund.bib
+
+include miun.course.mk
