--- a/assignments/assgn-internet/Makefile
+++ b/assignments/assgn-internet/Makefile
@@ -1,7 +1,7 @@
-SERVER=		secure.itm.miun.se
-PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund/assignments
 FILES=		assgn-internet.tex ../../itgrund.bib
 DOCUMENTS=	assgn-internet.pdf
 
-include miun.docs.mk
+assgn-internet.pdf: assgn-internet.tex ../../itgrund.bib
+
+include miun.course.mk
