--- a/assignments/assgn-security/Makefile
+++ b/assignments/assgn-security/Makefile
@@ -1,7 +1,7 @@
-SERVER=		secure.itm.miun.se
-PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund/assignments
 FILES=		assgn-security.tex ../../itgrund.bib
 DOCUMENTS=	assgn-security.pdf
 
-include miun.docs.mk
+assgn-security.pdf: assgn-security.tex ../../itgrund.bib
+
+include miun.course.mk
