--- a/assignments/assgn-terminal/Makefile
+++ b/assignments/assgn-terminal/Makefile
@@ -1,7 +1,7 @@
-SERVER=		secure.itm.miun.se
-PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund/assignments
 FILES=		assgn-terminal.tex ../../itgrund.bib
 DOCUMENTS=	assgn-terminal.pdf
 
-include miun.docs.mk
+assgn-terminal.pdf: assgn-terminal.tex ../../itgrund.bib
+
+include miun.course.mk
