--- a/compendium/Makefile
+++ b/compendium/Makefile
@@ -1,7 +1,7 @@
-SERVER?=	secure.itm.miun.se
-PUBDIR?=	/home/danbos/www/pub
 CATEGORY?=	itgrund
 FILES?=		compendium.tex ../itgrund.bib
 DOCUMENTS?=	compendium.pdf
 
-include miun.subdir.mk
+compendium.pdf: compendium.tex ../itgrund.bib
+
+include miun.course.mk
