--- a/introduction/Makefile
+++ b/introduction/Makefile
@@ -1,8 +1,10 @@
-SERVER=		secure.itm.miun.se
-PUBDIR=		/home/danbos/www/pub
 CATEGORY=	itgrund
 FILES=		literature.tex ../itgrund.bib welcome.tex studyguide.tex \
 			kursplan.pdf
 DOCUMENTS=	literature.pdf welcome.pdf studyguide.pdf
 
-include miun.docs.mk
+literature.pdf: literature.tex ../itgrund.bib
+welcome.pdf: welcome.tex kursplan.pdf
+studyguide.pdf: studyguide.tex ../itgrund.bib
+
+include miun.course.mk
