added TeX-file and fixed typo in makefile
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@217 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,7 +1,7 @@
 CATEGORY=	itgrund/project
-FILES=		project.tex ../../itgrund.bib
+FILES=		project.tex ../itgrund.bib
 DOCUMENTS=	project.pdf
 
-project.pdf: project.tex ../../itgrund.bib
+project.pdf: project.tex ../itgrund.bib
 
 include miun.course.mk
