corrected depends for literature.pdf
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@229 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/introduction/Makefile
+++ b/introduction/Makefile
@@ -3,7 +3,14 @@ FILES=		literature.tex ../itgrund.bib welcome.tex studyguide.tex \
 			kursplan.pdf
 DOCUMENTS=	literature.pdf welcome.pdf studyguide.pdf
 
-literature.pdf: literature.tex ../itgrund.bib
+literature.pdf: literature.tex ../itgrund.bib \
+	../assignments/install/literature.tex \
+	../assignments/terminal/literature.tex \
+	../assignments/latex/literature.tex \
+	../assignments/computer/literature.tex \
+	../assignments/internet/literature.tex \
+	../assignments/security/literature.tex \
+	../assignments/sftp/literature.tex
 welcome.pdf: welcome.tex kursplan.pdf
 studyguide.pdf: studyguide.tex ../itgrund.bib
 
