updated itgrund.bib -> literature.bib
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@247 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/install/Makefile
+++ b/assignments/install/Makefile
@@ -1,7 +1,7 @@
 CATEGORY=	itgrund/assignments
-FILES=		install.tex ../../itgrund.bib
+FILES=		install.tex ../../literature.bib
 DOCUMENTS=	install.pdf
 
-install.pdf: install.tex ../../itgrund.bib
+install.pdf: install.tex ../../literature.bib
 
 include miun.course.mk
