--- a/assignments/latex/Makefile
+++ b/assignments/latex/Makefile
@@ -1,7 +1,7 @@
 DOCUMENTS=	latex.pdf
-FILES=		latex.tex ../../itgrund.bib
+FILES=		latex.tex ../../literature.bib
 CATEGORY=	itgrund/assignments
 
-latex.pdf: latex.tex ../../itgrund.bib
+latex.pdf: latex.tex ../../literature.bib
 
 include miun.course.mk
