--- a/assignments/sftp/Makefile
+++ b/assignments/sftp/Makefile
@@ -1,7 +1,7 @@
 DOCUMENTS=	sftp.pdf
-FILES=		sftp.tex ../../itgrund.bib rfc.bib
+FILES=		sftp.tex ../../literature.bib rfc.bib
 CATEGORY=	itgrund/assignments
 
-sftp.pdf: sftp.tex rfc.bib ../../itgrund.bib
+sftp.pdf: sftp.tex rfc.bib ../../literature.bib
 
 include miun.course.mk
