--- a/assignments/terminal/Makefile
+++ b/assignments/terminal/Makefile
@@ -1,7 +1,7 @@
 CATEGORY=	itgrund/assignments
-FILES=		terminal.tex ../../itgrund.bib
+FILES=		terminal.tex ../../literature.bib
 DOCUMENTS=	terminal.pdf
 
-terminal.pdf: terminal.tex ../../itgrund.bib
+terminal.pdf: terminal.tex ../../literature.bib
 
 include miun.course.mk
