--- a/assignments/computer/Makefile
+++ b/assignments/computer/Makefile
@@ -1,7 +1,7 @@
 CATEGORY=	itgrund/assignments
-FILES=		computer.tex ../../itgrund.bib
+FILES=		computer.tex ../../literature.bib
 DOCUMENTS=	computer.pdf
 
-computer.pdf: computer.tex ../../itgrund.bib
+computer.pdf: computer.tex ../../literature.bib
 
 include miun.course.mk
