--- a/introduction/Makefile
+++ b/introduction/Makefile
@@ -1,9 +1,9 @@
 CATEGORY=	itgrund
-FILES=		literature.tex ../itgrund.bib welcome.tex studyguide.tex \
+FILES=		literature.tex ../literature.bib welcome.tex studyguide.tex \
 			kursplan.pdf
 DOCUMENTS=	literature.pdf welcome.pdf studyguide.pdf
 
-literature.pdf: literature.tex ../itgrund.bib \
+literature.pdf: literature.tex ../literature.bib \
 	../assignments/install/literature.tex \
 	../assignments/terminal/literature.tex \
 	../assignments/latex/literature.tex \
@@ -12,6 +12,6 @@ literature.pdf: literature.tex ../itgrund.bib \
 	../assignments/security/literature.tex \
 	../assignments/sftp/literature.tex
 welcome.pdf: welcome.tex kursplan.pdf
-studyguide.pdf: studyguide.tex ../itgrund.bib
+studyguide.pdf: studyguide.tex ../literature.bib
 
 include miun.course.mk
