renamed itgrund.bib -> literature.bib
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@248 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/compendium/Makefile
+++ b/compendium/Makefile
@@ -1,7 +1,7 @@
 CATEGORY?=	itgrund/literature
-FILES?=		compendium.tex ../itgrund.bib
+FILES?=		compendium.tex ../literature.bib
 DOCUMENTS?=	compendium.pdf
 
-compendium.pdf: compendium.tex ../itgrund.bib
+compendium.pdf: compendium.tex ../literature.bib
 
 include miun.course.mk
