--- a/lectures/security/Makefile
+++ b/lectures/security/Makefile
@@ -1,7 +1,7 @@
 CATEGORY=	itgrund/lectures
-FILES=		security.tex ../../itgrund.bib
+FILES=		security.tex ../../literature.bib
 DOCUMENTS=	security.pdf
 
-security.pdf: security.tex ../../itgrund.bib
+security.pdf: security.tex ../../literature.bib
 
 include miun.course.mk
