--- a/lectures/shell/Makefile
+++ b/lectures/shell/Makefile
@@ -1,7 +1,7 @@
 CATEGORY=	itgrund/lectures
-FILES=		shell.tex ../../itgrund.bib
+FILES=		shell.tex ../../literature.bib
 DOCUMENTS=	shell.pdf
 
-shell.pdf: shell.tex ../../itgrund.bib
+shell.pdf: shell.tex ../../literature.bib
 
 include miun.course.mk
