first draft.  added literature.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@319 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,7 +1,7 @@
 CATEGORY=	itgrund/project
-FILES=		project.tex ../literature.bib
+FILES=		project.tex ../literature.bib literature.tex
 DOCUMENTS=	project.pdf
 
-project.pdf: project.tex ../literature.bib
+project.pdf: project.tex ../literature.bib literature.tex
 
 include miun.course.mk
