clarification and added tar(1) to next year.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@320 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/terminal/Makefile
+++ b/assignments/terminal/Makefile
@@ -2,6 +2,12 @@ CATEGORY=	itgrund/assignments
 FILES=		terminal.tex ../../literature.bib
 DOCUMENTS=	terminal.pdf
 
-terminal.pdf: terminal.tex ../../literature.bib
+#PACKAGE=		terminal-src
+#PACKAGE_FILES=	${FILES}
+#
+#PUB_FILES=		${PACKAGE}.tar.gz ${DOCUMENTS}
+
+terminal.pdf: ${FILES}
 
 include miun.course.mk
+#include miun.package.mk
