added md5 collision example.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@328 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/security/Makefile
+++ b/lectures/security/Makefile
@@ -2,6 +2,14 @@ CATEGORY=	itgrund/lectures
 FILES=		security.tex ../../literature.bib
 DOCUMENTS=	security.pdf
 
-security.pdf: security.tex ../../literature.bib
+security.pdf: security.tex ../../literature.bib order.eps letter_of_rec.eps
+
+order.eps: order.ps
+	ps2eps order.ps
+letter_of_rec.eps: letter_of_rec.ps
+	ps2eps letter_of_rec.ps
+
+clean: clean-course
+	${RM} letter_of_rec.eps order.eps
 
 include miun.course.mk
