correct title.  clarifications.  publish source.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@335 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/sftp/Makefile
+++ b/assignments/sftp/Makefile
@@ -2,6 +2,12 @@ DOCUMENTS=	sftp.pdf
 FILES=		sftp.tex ../../literature.bib rfc.bib
 CATEGORY=	itgrund/assignments
 
-sftp.pdf: sftp.tex rfc.bib ../../literature.bib
+PACKAGE=		sftp-src
+PACKAGE_FILES=	${FILES}
+
+PUB_FILES=		${PACKAGE}.tar.gz ${DOCUMENTS}
+
+sftp.pdf: ${FILES} rfc.bib
 
 include miun.course.mk
+include miun.package.mk
