--- a/assignments/install/Makefile
+++ b/assignments/install/Makefile
@@ -2,6 +2,12 @@ CATEGORY=	itgrund/assignments
 FILES=		install.tex ../../literature.bib
 DOCUMENTS=	install.pdf
 
+PACKAGE=		install-src
+PACKAGE_FILES=	${FILES}
+
+PUB_FILES=		${PACKAGE}.tar.gz ${DOCUMENTS}
+
 install.pdf: install.tex ../../literature.bib
 
 include miun.course.mk
+include miun.package.mk
