make package with sources
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@363 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/shell/Makefile
+++ b/lectures/shell/Makefile
@@ -2,6 +2,12 @@ CATEGORY=	itgrund/lectures
 FILES=		shell.tex ../../literature.bib
 DOCUMENTS=	shell.pdf
 
+PACKAGE=		shell-src
+PACKAGE_FILES=	${FILES}
+
+PUB_FILES=	${PACKAGE}.tar.gz ${DOCUMENTS}
+
 shell.pdf: shell.tex ../../literature.bib
 
 include miun.course.mk
+include miun.package.mk
