clarification, fixed errornous solution, added (un)published package code
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@367 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/internet/Makefile
+++ b/assignments/internet/Makefile
@@ -1,7 +1,13 @@
 CATEGORY=	itgrund/assignments
 FILES=		internet.tex ../../literature.bib
 DOCUMENTS=	internet.pdf
+ 
+PACKAGE=		internet-src
+PACKAGE_FILES=	${FILES}
+
+PUB_FILES=		${DOCUMENTS}
 
 internet.pdf: internet.tex ../../literature.bib
 
 include miun.course.mk
+include miun.package.mk
