dt028g intro prog
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@376 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/Makefile
+++ b/assignments/Makefile
@@ -2,9 +2,9 @@ SUBDIR?= \
 		 install \
 		 terminal \
 		 latex \
-		 computer \
 		 internet \
 		 security \
 		 sftp
+		 #computer \
 
 include miun.subdir.mk
