--- a/assignments/security/Makefile
+++ b/assignments/security/Makefile
@@ -2,6 +2,12 @@ CATEGORY=	itgrund/assignments
 FILES=		security.tex ../../literature.bib
 DOCUMENTS=	security.pdf
 
+PACKAGE=		security-src
+PACKAGE_FILES=	${FILES}
+
+PUB_FILES=		${DOCUMENTS}
+
 security.pdf: security.tex ../../literature.bib
 
 include miun.course.mk
+include miun.package.mk
