--- a/assignments/terminal/Makefile
+++ b/assignments/terminal/Makefile
@@ -2,12 +2,12 @@ CATEGORY=	itgrund/assignments
 FILES=		terminal.tex ../../literature.bib
 DOCUMENTS=	terminal.pdf
 
-#PACKAGE=		terminal-src
-#PACKAGE_FILES=	${FILES}
-#
-#PUB_FILES=		${PACKAGE}.tar.gz ${DOCUMENTS}
+PACKAGE=		terminal-src
+PACKAGE_FILES=	${FILES}
+
+PUB_FILES=		${DOCUMENTS}
 
 terminal.pdf: ${FILES}
 
 include miun.course.mk
-#include miun.package.mk
+include miun.package.mk
