added author and license.  minor code fixes.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@520 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/install/Makefile
+++ b/assignments/install/Makefile
@@ -1,5 +1,5 @@
 CATEGORY=	itgrund/assignments
-FILES=		install.tex ../../literature.bib
+FILES=		install.tex literature.tex literature.bib
 DOCUMENTS=	install.pdf
 
 PACKAGE=		install-src
@@ -7,7 +7,12 @@ PACKAGE_FILES=	${FILES}
 
 PUB_FILES=		${PACKAGE}.tar.gz ${DOCUMENTS}
 
-install.pdf: install.tex ../../literature.bib
+install.pdf: install.tex literature.tex literature.bib
+literature.bib: ../../literature.bib
+	${CP} $^ $@
+
+clean:
+	${RM} literature.bib
 
 include miun.course.mk
 include miun.package.mk
