--- a/assignments/terminal/Makefile
+++ b/assignments/terminal/Makefile
@@ -1,5 +1,5 @@
 CATEGORY=	itgrund/assignments
-FILES=		terminal.tex ../../literature.bib
+FILES=		terminal.tex literature.tex literature.bib
 DOCUMENTS=	terminal.pdf
 
 PACKAGE=		terminal-src
@@ -8,6 +8,11 @@ PACKAGE_FILES=	${FILES}
 PUB_FILES=		${DOCUMENTS}
 
 terminal.pdf: ${FILES}
+literature.bib: ../../literature.bib
+	${CP} $^ $@
+
+clean:
+	${RM} literature.bib
 
 include miun.course.mk
 include miun.package.mk
