project results.  minor typo in rewrite rules of project title.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@597 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/h12/Makefile
+++ b/h12/Makefile
@@ -3,7 +3,7 @@
 COURSE=		DT001G_27067_HT12
 REWRITES=	"s/Godkänd(G)/P/g" \
 			"s/Underkänd(U)/F/g" "s/Komplettering(Fx)/Fx/g" \
-			"s/Assignment:P0Projekt/R105/g" \
+			"s/Assignment:P0Projektrapport/R105/g" \
 			"s/Assignment:P1Projektpresentation/P105/g" \
 			"s/Assignment:L[0-9]*\([A-Za-z]*\)/I105:\1/g"
 
