Code clean-up for intro lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1161 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/intro/Makefile
+++ b/lectures/intro/Makefile
@@ -1,7 +1,31 @@
 CATEGORY=	itgrund/lectures
-FILES=		intro.tex ../../literature.bib
+FILES=		intro.tex literature.bib
 DOCUMENTS=	intro.pdf
 
-intro.pdf: intro.tex ../../literature.bib
+PACKAGE= 		intro-src
+TARBALL_FILES= 	Makefile ${FILES}
 
+USE_LATEXMK= 	yes
+USE_BIBLATEX= 	yes
+
+intro.pdf intro.ps: ${FILES}
+
+#export no
+
+TARBALL_FILES= 	Makefile.export ${FILES:.tex=.exporttex}
+PUB_FILES= 		${PACKAGE}.tar.gz ${DOCUMENTS}
+
+literature.bib: ../../literature.bib
+	${CP} $^ $@
+
+#endexport
+
+miun.depend.mk:
+ifeq (${MAKE},gmake)
+	lynx -dump http://ver.miun.se/build/$@ > $@
+else
+	wget http://ver.miun.se/build/$@
+endif
+
+include miun.depend.mk
 include miun.course.mk
