Uses terminal lab instead of linux lab, minor imports to terminal from linux
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1172 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/Makefile
+++ b/labs/Makefile
@@ -1,6 +1,6 @@
 SUBDIR= 	install
-#SUBDIR+= 	terminal
-SUBDIR+= 	linux
+SUBDIR+= 	terminal
+#SUBDIR+= 	linux
 SUBDIR+= 	python
 SUBDIR+= 	latex
 #SUBDIR+= 	computer
