Clarifies project instructions and imports work from natovervak project
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1175 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,7 +1,28 @@
 CATEGORY=	itgrund/project
-FILES=		project.tex ../literature.bib literature.tex
+FILES=		project.tex literature.bib literature.tex
 DOCUMENTS=	project.pdf
 
-project.pdf: project.tex ../literature.bib literature.tex
+USE_LATEXMK= 	yes
+USE_BIBLATEX= 	yes
 
+project.pdf project.ps: ${FILES}
+
+#export no
+TARBALL_FILES= 	${FILES} Makefile.export
+
+literature.bib: ../literature.bib
+	${CP} $^ $@
+
+clean:
+	${RM} literature.bib
+#endexport
+
+miun.depend.mk:
+ifeq (${MAKE},gmake)
+	lynx -dump http://ver.miun.se/build/$@ > $@
+else
+	wget http://ver.miun.se/build/$@
+endif
+
+include miun.depend.mk
 include miun.course.mk
