Removes latex lab, add mandatory latex for project
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1177 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/Makefile
+++ b/labs/Makefile
@@ -2,7 +2,7 @@ SUBDIR= 	install
 SUBDIR+= 	terminal
 #SUBDIR+= 	linux
 SUBDIR+= 	python
-SUBDIR+= 	latex
+#SUBDIR+= 	latex
 #SUBDIR+= 	computer
 #SUBDIR+= 	internet
 #SUBDIR+= 	security
