Adjusts to new lecture series
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1178 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/Makefile
+++ b/lectures/Makefile
@@ -1,10 +1,11 @@
-SUBDIR?= \
-		 shell \
-		 latex \
-		 #internet \
-		 #security \
-		 #present
-		 #intro \
-		 #datarep \
+SUBDIR= 	intro
+#SUBDIR+= 	datarep
+#SUBDIR+= 	arch
+#SUBDIR+= 	shell
+#SUBDIR+= 	python
+#SUBDIR+= 	latex
+##SUBDIR+= 	internet
+##SUBDIR+= 	security
+#SUBDIR+= 	present
 
 include miun.subdir.mk
