Work in progress: develop computer and python labs
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1181 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/Makefile
+++ b/labs/Makefile
@@ -3,7 +3,7 @@ SUBDIR+= 	terminal
 #SUBDIR+= 	linux
 SUBDIR+= 	python
 #SUBDIR+= 	latex
-#SUBDIR+= 	computer
+SUBDIR+= 	computer
 #SUBDIR+= 	internet
 #SUBDIR+= 	security
 #SUBDIR+= 	sftp
