--- a/studyguide/Makefile
+++ b/studyguide/Makefile
@@ -9,9 +9,9 @@ PACKAGE_FILES=	${FILES} Makefile
 PUB_FILES=	${DOCUMENTS} ${PACKAGE}.tar.gz
 
 LABS=		install-aim.tex install-lit.tex
-LABS+= 		linux-aim.tex linux-lit.tex
+LABS+= 		term-aim.tex term-lit.tex
 LABS+= 		pylab-aim.tex pylab-lit.tex
-LABS+= 		latex-aim.tex latex-lit.tex
+LABS+= 		computer-aim.tex computer-lit.tex
 #LABS+= 		sftp-aim.tex sftp-lit.tex
 SEMINARS=
 PM=
@@ -37,16 +37,18 @@ literature.bib: ../literature.bib
 	${CP} $^ $@
 
 install-aim.tex: ../labs/install/aims.tex
-linux-aim.tex: ../labs/linux/aims.tex
+term-aim.tex: ../labs/terminal/aims.tex
 pylab-aim.tex: ../labs/python/aims.tex
 latex-aim.tex: ../labs/latex/aims.tex
+computer-aim.tex: ../labs/computer/aims.tex
 sftp-aim.tex: ../labs/sftp/aims.tex
 project-aim.tex: ../project/aims.tex
 
 install-lit.tex: ../labs/install/literature.tex
-linux-lit.tex: ../labs/linux/literature.tex
+term-lit.tex: ../labs/terminal/literature.tex
 pylab-lit.tex: ../labs/python/literature.tex
 latex-lit.tex: ../labs/latex/literature.tex
+computer-lit.tex: ../labs/computer/literature.tex
 sftp-lit.tex: ../labs/sftp/literature.tex
 
 intro-lit.tex: ../lectures/intro/literature.tex
