Minor changes to make course material compile
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1203 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/terminal/Makefile
+++ b/labs/terminal/Makefile
@@ -7,6 +7,9 @@ PACKAGE_FILES=	${FILES}
 
 PUB_FILES=		${DOCUMENTS}
 
+USE_LATEXMK= 	yes
+USE_BIBLATEX= 	yes
+
 terminal.pdf: ${FILES}
 literature.bib: ../../literature.bib
 	${CP} $^ $@
