Adds first draft of Python lab
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1212 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/python/Makefile
+++ b/labs/python/Makefile
@@ -1,5 +1,5 @@
 CATEGORY=	itgrund/labs
-FILES=		python.tex literature.tex literature.bib
+FILES=		python.tex aims.tex literature.tex literature.bib
 DOCUMENTS=	python.pdf
 
 PACKAGE=		python-src
