Corrects typos etc in itgrund material
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1215 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/Makefile
+++ b/labs/computer/Makefile
@@ -1,5 +1,5 @@
 CATEGORY=	itgrund/assignments
-FILES=		computer.tex literature.bib
+FILES=		computer.tex literature.tex aims.tex literature.bib
 DOCUMENTS=	computer.pdf
 
 USE_LATEXMK= 	yes
