--- a/labs/terminal/Makefile
+++ b/labs/terminal/Makefile
@@ -1,21 +1,35 @@
-CATEGORY=	itgrund/assignments
-FILES=		terminal.tex literature.tex literature.bib
+CATEGORY=	itgrund/labs
+FILES=		terminal.tex aims.tex literature.tex literature.bib
 DOCUMENTS=	terminal.pdf
 
 PACKAGE=		terminal-src
-PACKAGE_FILES=	${FILES}
+TARBALL_FILES=	${FILES}
 
-PUB_FILES=		${DOCUMENTS}
+PUB_FILES=		${DOCUMENTS} ${PACKAGE}.tar.gz
 
 USE_LATEXMK= 	yes
 USE_BIBLATEX= 	yes
 
-terminal.pdf: ${FILES}
+terminal.pdf terminal.ps: ${FILES}
+
+#export no
 literature.bib: ../../literature.bib
 	${CP} $^ $@
+Makefile.export: Makefile
+
+TARBALL_FILES= 	${FILES:.tex=.exporttex} Makefile.export
 
 clean:
 	${RM} literature.bib
+#endexport
 
+miun.depend.mk:
+ifeq (${MAKE},gmake)
+	lynx -dump http://ver.miun.se/build/$@ > $@
+else
+	wget http://ver.miun.se/build/$@
+endif
+
+include miun.depend.mk
 include miun.course.mk
 include miun.package.mk
