Adds more literature and reading instructions, also some code cleanup
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1221 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/latex/Makefile
+++ b/lectures/latex/Makefile
@@ -1,12 +1,12 @@
 CATEGORY=	itgrund/lectures
-latexsrc=	latex.tex ../../literature.bib theory.tex thesis.tex \
+latexsrc=	latex.tex literature.bib theory.tex thesis.tex \
 			circular_margin.jpg maps.jpg tengwar.jpg music.jpg
 examplessrc=examples.tex literature.bib
 FILES=		${latexsrc} ${examplessrc}
 DOCUMENTS=	latex.pdf latex-examples.pdf
 
 PACKAGE=		latex-src
-PACKAGE_FILES=	${FILES}
+TARBALL_FILES=	${FILES}
 
 PUB_FILES=	${PACKAGE}.tar.gz ${DOCUMENTS}
 
@@ -14,5 +14,21 @@ latex.pdf: ${latexsrc}
 latex-examples.pdf: examples.pdf ${examplessrc}
 	mv examples.pdf $@
 
+#export no
+literature.bib: ../../literature.bib
+	${CP} $^ $@
+
+clean:
+	${RM} literature.bib
+#endexport
+
+miun.depend.mk:
+ifeq (${MAKE},gmake)
+	lynx -dump http://ver.miun.se/build/$@ > $@
+else
+	wget http://ver.miun.se/build/$@
+endif
+
+include miun.depend.mk
 include miun.course.mk
 include miun.package.mk
