Work around for labels-may-have-changed bug
Whenever there is a only a single \item in inst-aims.tex there will be endless
reports of ``Labels may have changed''.

git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1222 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/studyguide/Makefile
+++ b/studyguide/Makefile
@@ -8,7 +8,7 @@ PACKAGE=	studyguide-src
 PACKAGE_FILES=	${FILES} Makefile
 PUB_FILES=	${DOCUMENTS} ${PACKAGE}.tar.gz
 
-LABS=		install-aim.tex install-lit.tex
+LABS=		inst-aim.tex inst-lit.tex
 LABS+= 		term-aim.tex term-lit.tex
 LABS+= 		pylab-aim.tex pylab-lit.tex
 LABS+= 		computer-aim.tex computer-lit.tex
@@ -36,7 +36,7 @@ PACKAGE_FILES=	${FILES:.tex=.exporttex} Makefile.export
 literature.bib: ../literature.bib
 	${CP} $^ $@
 
-install-aim.tex: ../labs/install/aims.tex
+inst-aim.tex: ../labs/install/aims.tex
 term-aim.tex: ../labs/terminal/aims.tex
 pylab-aim.tex: ../labs/python/aims.tex
 latex-aim.tex: ../labs/latex/aims.tex
@@ -44,7 +44,7 @@ computer-aim.tex: ../labs/computer/aims.tex
 sftp-aim.tex: ../labs/sftp/aims.tex
 project-aim.tex: ../project/aims.tex
 
-install-lit.tex: ../labs/install/literature.tex
+inst-lit.tex: ../labs/install/literature.tex
 term-lit.tex: ../labs/terminal/literature.tex
 pylab-lit.tex: ../labs/python/literature.tex
 latex-lit.tex: ../labs/latex/literature.tex
