Sets correct publish category
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1271 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/Makefile
+++ b/labs/computer/Makefile
@@ -1,4 +1,4 @@
-CATEGORY=	itgrund/assignments
+CATEGORY=	itgrund/labs
 FILES=		computer.tex literature.tex aims.tex literature.bib
 DOCUMENTS=	computer.pdf
 
