Code cleanup, adds image
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1276 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/datarep/Makefile
+++ b/lectures/datarep/Makefile
@@ -14,6 +14,9 @@ Makefile.export: Makefile
 
 TARBALL_FILES= 	${FILES:.tex=.exporttex} Makefile.export
 PUB_FILES= 		${PACKAGE}.tar.gz ${DOCUMENTS}
+
+clean:
+	${RM} literature.bib
 #endexport
 
 miun.depend.mk:
