Final version of lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1275 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/datarep/Makefile
+++ b/lectures/datarep/Makefile
@@ -1,7 +1,24 @@
 CATEGORY=	itgrund/lectures
-FILES=		datarep.tex ../../literature.bib
+FILES=		datarep.tex literature.bib
 DOCUMENTS=	datarep.pdf
 
-datarep.pdf: datarep.tex ../../literature.bib
+PACKAGE= 		datarep-src
+TARBALL_FILES= 	${FILES} Makefile
 
+datarep.pdf: ${FILES}
+
+#export no
+literature.bib: ../../literature.bib
+	${CP} $^ $@
+Makefile.export: Makefile
+
+TARBALL_FILES= 	${FILES:.tex=.exporttex} Makefile.export
+PUB_FILES= 		${PACKAGE}.tar.gz ${DOCUMENTS}
+#endexport
+
+miun.depend.mk:
+	wget http://ver.miun.se/build/$@
+
+include miun.depend.mk
 include miun.course.mk
+include miun.package.mk
