Corrects typos in makefiles
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1288 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/intro/Makefile
+++ b/lectures/intro/Makefile
@@ -11,16 +11,15 @@ USE_BIBLATEX= 	yes
 intro.pdf intro.ps: ${FILES}
 
 #export no
-
 TARBALL_FILES= 	Makefile.export ${FILES:.tex=.exporttex}
 PUB_FILES= 		${PACKAGE}.tar.gz ${DOCUMENTS}
 
+Makefile.export: Makefile
 literature.bib: ../../literature.bib
 	${CP} $^ $@
 
 clean:
 	${RM} ${DOCUMENTS} literature.bib
-
 #endexport
 
 miun.depend.mk:
