Final version for lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1295 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/shell/Makefile
+++ b/lectures/shell/Makefile
@@ -1,13 +1,26 @@
 CATEGORY=	itgrund/lectures
-FILES=		shell.tex ../../literature.bib
+FILES=		shell.tex literature.bib
 DOCUMENTS=	shell.pdf
 
 PACKAGE=		shell-src
-PACKAGE_FILES=	${FILES}
+TARBALL_FILES=	${FILES} Makefile
 
 PUB_FILES=	${PACKAGE}.tar.gz ${DOCUMENTS}
 
-shell.pdf: shell.tex ../../literature.bib
+shell.pdf: ${FILES}
 
+#export no
+literature.bib: ../../literature.bib
+	${CP} $^ $@
+
+TARBALL_FILES= 	Makefile.export ${FILES:.tex=.exporttex}
+
+Makefile.export: Makefile
+#endexport
+
+miun.depend.mk:
+	wget http://ver.miun.se/build/$@
+
+include miun.depend.mk
 include miun.course.mk
 include miun.package.mk
