Adds clean target to remove literature.bib
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1296 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/shell/Makefile
+++ b/lectures/shell/Makefile
@@ -16,6 +16,9 @@ literature.bib: ../../literature.bib
 TARBALL_FILES= 	Makefile.export ${FILES:.tex=.exporttex}
 
 Makefile.export: Makefile
+
+clean:
+	${RM} literature.bib
 #endexport
 
 miun.depend.mk:
