Adds final version of intro python lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1317 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/Makefile
+++ b/lectures/Makefile
@@ -1,8 +1,8 @@
 SUBDIR= 	intro
 SUBDIR+= 	datarep
 SUBDIR+= 	arch
-#SUBDIR+= 	shell
-#SUBDIR+= 	python
+SUBDIR+= 	shell
+SUBDIR+= 	python
 #SUBDIR+= 	latex
 ##SUBDIR+= 	internet
 ##SUBDIR+= 	security
