Enables python workshop in recursive build, prepares for second python workshop
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1327 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/Makefile
+++ b/workshops/python/Makefile
@@ -1,13 +1,13 @@
 CATEGORY=	itgrund/workshops
-FILES=		python.tex literature.bib
-DOCUMENTS=	python.pdf
+FILES=		python1.tex literature.bib
+DOCUMENTS=	python1.pdf
 
 PACKAGE=		python-src
 TARBALL_FILES=	${FILES} Makefile
 
 PUB_FILES=	${PACKAGE}.tar.gz ${DOCUMENTS}
 
-python.pdf: ${FILES}
+python1.pdf: ${FILES}
 
 #export no
 literature.bib: ../../literature.bib
