Renames present to report, focus on reports not presentations
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1328 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/Makefile
+++ b/lectures/Makefile
@@ -6,6 +6,6 @@ SUBDIR+= 	python
 #SUBDIR+= 	latex
 ##SUBDIR+= 	internet
 ##SUBDIR+= 	security
-#SUBDIR+= 	present
+#SUBDIR+= 	report
 
 include miun.subdir.mk
