Adds O1.py to src
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1332 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/python/Makefile
+++ b/lectures/python/Makefile
@@ -1,5 +1,5 @@
 CATEGORY=	itgrund/lectures
-FILES=		python.tex literature.bib
+FILES=		python.tex literature.bib O1.py
 DOCUMENTS=	python.pdf
 
 PACKAGE= 		python-src
