Renames python lecture to python1
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1333 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/python/Makefile
+++ b/lectures/python/Makefile
@@ -1,6 +1,6 @@
 CATEGORY=	itgrund/lectures
-FILES=		python.tex literature.bib O1.py
-DOCUMENTS=	python.pdf
+FILES=		python1.tex literature.bib O1.py
+DOCUMENTS=	python1.pdf
 
 PACKAGE= 		python-src
 TARBALL_FILES= 	${FILES} Makefile
