Adds example code from workshop
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1335 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/Makefile
+++ b/workshops/python/Makefile
@@ -1,5 +1,5 @@
 CATEGORY=	itgrund/workshops
-FILES=		python1.tex literature.bib
+FILES=		python1.tex literature.bib speed1.py
 DOCUMENTS=	python1.pdf
 
 PACKAGE=		python-src
