Final version of second lecture on python
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1340 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/python/Makefile
+++ b/lectures/python/Makefile
@@ -1,5 +1,6 @@
 CATEGORY=	itgrund/lectures
 FILES=		python1.tex literature.bib O1.py
+FILES= 		python2.tex literature.bib porto.py hist.py
 DOCUMENTS=	python1.pdf
 
 PACKAGE= 		python-src
