Adds second workshop for publication, without solutions yet
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1346 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/Makefile
+++ b/workshops/python/Makefile
@@ -1,6 +1,7 @@
 CATEGORY=	itgrund/workshops
 FILES=		python1.tex literature.bib speed1.py
-DOCUMENTS=	python1.pdf
+FILES+= 	python2.tex
+DOCUMENTS=	python1.pdf python2.pdf
 
 PACKAGE=		python-src
 TARBALL_FILES=	${FILES} Makefile
