Adds code for second workshop
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1348 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/Makefile
+++ b/workshops/python/Makefile
@@ -1,6 +1,6 @@
 CATEGORY=	itgrund/workshops
 FILES=		python1.tex literature.bib speed1.py
-FILES+= 	python2.tex
+FILES+= 	python2.tex speed2.py
 DOCUMENTS=	python1.pdf python2.pdf
 
 PACKAGE=		python-src
