Enables latex lecture in recursive build
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1354 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/Makefile
+++ b/lectures/Makefile
@@ -3,7 +3,7 @@ SUBDIR+= 	datarep
 SUBDIR+= 	arch
 SUBDIR+= 	shell
 SUBDIR+= 	python
-#SUBDIR+= 	latex
+SUBDIR+= 	latex
 ##SUBDIR+= 	internet
 ##SUBDIR+= 	security
 #SUBDIR+= 	report
