Final changes to make latex examples work
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1355 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/latex/Makefile
+++ b/lectures/latex/Makefile
@@ -14,8 +14,8 @@ USE_LATEXMK= 	yes
 
 PUB_FILES=	${PACKAGE}.tar.gz ${DOCUMENTS}
 
-latex.pdf: ${latexsrc} example1.pdf
-latex-examples.pdf: examples.pdf ${examplessrc}
+latex.pdf: ${latexsrc} example1.pdf examples.pdf
+latex-examples.pdf: examples.pdf
 	mv examples.pdf $@
 
 examples.pdf: examples.tex literature.bib
@@ -23,17 +23,17 @@ examples.pdf: examples.tex literature.bib
 #export no
 literature.bib: ../../literature.bib
 	${CP} $^ $@
+Makefile.export: Makefile
 
 clean:
 	${RM} literature.bib
+
+TARBALL_FILES= 	${FILES:.tex=.exporttex} Makefile.export
+PUB_FILES= 	${DOCUMENTS} ${PACKAGE}.tar.gz
 #endexport
 
 miun.depend.mk:
-ifeq (${MAKE},gmake)
-	lynx -dump http://ver.miun.se/build/$@ > $@
-else
 	wget http://ver.miun.se/build/$@
-endif
 
 include miun.depend.mk
 include miun.course.mk
