Adds solution to workshop
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1373 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/latex/Makefile
+++ b/workshops/latex/Makefile
@@ -1,6 +1,7 @@
 CATEGORY=	itgrund/workshops
 FILES= 		latex.tex literature.bib
-DOCUMENTS=	latex.pdf
+FILES+= 	dokument.tex
+DOCUMENTS=	latex.pdf dokument.pdf
 
 PACKAGE=		latex-src
 TARBALL_FILES=	${FILES} Makefile
@@ -8,6 +9,7 @@ TARBALL_FILES=	${FILES} Makefile
 PUB_FILES=	${PACKAGE}.tar.gz ${DOCUMENTS}
 
 latex.pdf: ${FILES}
+dokument.pdf: dokument.tex literature.bib
 
 #export no
 literature.bib: ../../literature.bib
