Adds example report
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1593 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,28 +1,32 @@
 CATEGORY=	itgrund/project
 FILES=		project.tex literature.bib literature.tex
+FILES+= 	report.pdf
 DOCUMENTS=	project.pdf
 
 USE_LATEXMK= 	yes
 USE_BIBLATEX= 	yes
 
-project.pdf project.ps: ${FILES}
+project.pdf: ${FILES}
 
 #export no
 TARBALL_FILES= 	${FILES} Makefile.export
 
+report/report.pdf: report
+	${MAKE} -C report report.pdf
+
+report.pdf: report/report.pdf
 literature.bib: ../literature.bib
+
+report.pdf literature.bib:
 	${CP} $^ $@
 
 clean:
-	${RM} literature.bib
+	${RM} literature.bib report.pdf
+	${MAKE} -C report clean
 #endexport
 
 miun.depend.mk:
-ifeq (${MAKE},gmake)
-	lynx -dump http://ver.miun.se/build/$@ > $@
-else
 	wget http://ver.miun.se/build/$@
-endif
 
 include miun.depend.mk
 include miun.course.mk
