Adds publication of source for present lab
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1933 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/present/Makefile
+++ b/labs/present/Makefile
@@ -9,6 +9,7 @@ present.pdf: ${FILES}
 
 #export no
 TARBALL_FILES= 	${FILES} Makefile.export
+PUB_FILES= 		${PACKAGE}.tar.gz ${DOCUMENTS}
 
 literature.bib: ../../literature.bib
 
