Adds missing depend for Makefile.export
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1936 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/present/Makefile
+++ b/labs/present/Makefile
@@ -11,6 +11,7 @@ present.pdf: ${FILES}
 TARBALL_FILES= 	${FILES} Makefile.export
 PUB_FILES= 		${PACKAGE}.tar.gz ${DOCUMENTS}
 
+Makefile.export: Makefile
 literature.bib: ../../literature.bib
 
 literature.bib:
